traces/bug_472.txt
examples++-load/gmsh.cpp:701: error: DEAD_STORE
  The value written to &elementary (type int) is never used.
Showing all 1 steps of the trace


examples++-load/gmsh.cpp:701:21: Write of unused value
699.   	 
700.   		  if(j == 0)      physical = tag;
701.   		  else if(j == 1) elementary = tag;
                           ^
702.   		  else if(j == 2) partition = tag;
703.   		  // ignore any other tags for now
